Bug 15355 - Issue: r6040 crashes in function r6040_multicast_list
Summary: Issue: r6040 crashes in function r6040_multicast_list
Status: CLOSED CODE_FIX
Alias: None
Product: Drivers
Classification: Unclassified
Component: Network (show other bugs)
Hardware: All Linux
: P1 high
Assignee: drivers_network@kernel-bugs.osdl.org
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-02-19 10:00 UTC by spamalot
Modified: 2011-01-24 12:40 UTC (History)
4 users (show)

See Also:
Kernel Version: 2.6.32.8
Subsystem:
Regression: No
Bisected commit-id:


Attachments
dmesg output and crash log (20.72 KB, application/octet-stream)
2010-02-19 10:00 UTC, spamalot
Details

Description spamalot 2010-02-19 10:00:00 UTC
Created attachment 25113 [details]
dmesg output and crash log

Starting avahi-daemon on Debian 5.0.3 triggers the function r6040_multicast_list which crashes the kernel. This bug was already submitted to the avahi mailing list on 4th of January 2010 by Mike Miller. Lennart Poettering suggested that this issue has to be addressed to the kernel development team. I haven't seen neither a follow-up on the avahi list, nor a bug report in bugzilla. As I'm suffering from the same problem, I'm picking up the issue and would like to file this bug report, hoping anybody can help fixing. In case any additional information is needed, I'm happy to provide such.

Hardware: SBC with Vortex86DX CPU (integrated R6040 Ethernet Controller)
OS: Debian 5.0.3 with custom built kernel from latest stable release (2.6.32.8)

Best regards, Patrick
Comment 1 Florian Fainelli 2010-02-19 11:02:35 UTC
Thanks for the report, by chance do you have a stack trace of what happens?
Comment 2 spamalot 2010-02-19 12:07:15 UTC
Only the call trace (see attachment). How can I extract a stack trace?
Comment 3 Florian Fainelli 2010-04-08 07:45:44 UTC
This is fixed with the following upstream commit: http://git.kernel.org/?p=linux/kernel/git/davem/net-2.6.git;a=commit;h=3bcf8229a8c49769e48d3e0bd1e20d8e003f8106
Comment 4 Lionel Debroux 2010-04-22 19:01:55 UTC
I've been hit by this bug as well under kernel 2.6.32.x (Debian squeeze package), thanks for fixing it :)

Maybe this fix could be pushed towards stable@kernel.org, as the crasher affects (at least) the long-term support 2.6.32.x series ?


Regards,
Lionel.
Comment 5 Florian Mickler 2011-01-24 12:39:42 UTC
some more fix for this committed in .37-rc1:
commit e2269308359d5863b6aa1fcb95a425a2ab255f1f
Author: Ben Hutchings <ben@decadent.org.uk>
Date:   Thu Oct 14 17:41:53 2010 +0000

    r6040: Fix multicast filter some more

Note You need to log in before you can comment on or make changes to this bug.